--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
   <div class="stack layer-topimg">
     <div class="top-image">
       <!-- замени на свой файл при необходимости -->
-      <img src="foto9.png" alt="Top Image (foto9)" />
+    <img src="foto9.png" alt="Foto9" class="foto9">
+
     </div>
   </div>
 
@@ -374,3 +375,4 @@
   </script>
 </body>
 </html>
+
