--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <div class="stack layer-topimg">
     <div class="top-image">
       <!-- замени на свой файл при необходимости -->
-   <img src="061491cf-6400-4f6a-961a-84475c4a6bd3.png" alt="Foto9" class="foto9">
+   <img src="foto9.png" alt="Foto9" class="foto9">
 
     </div>
   </div>
@@ -375,5 +375,6 @@
   </script>
 </body>
 </html>
+
 
 
