--- a/index.html
+++ b/index.html
@@ -370,11 +370,13 @@
       } else {
         resultEl.innerText = "❌ Address not found in whitelist.";
         resultEl.style.color = "#ff6688";
+          inputEl.value = "";
       }
     }
   </script>
 </body>
 </html>
+
 
 
 
