--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-      --page-w: 450px; /* ширина контейнера (input + кнопка) */
+      --page-w: 450px;
     }
-
     html, body {
       margin: 0;
       padding: 0;
@@ -16,39 +15,23 @@
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
       color: #fff;
-      overflow: hidden; /* чтобы вылетающие элементы уходили за экран */
+      overflow: hidden;
     }
-
-    /* ====== СЛОИ (z-index) ====== */
-    /* 0 — тени монстров, 1 — монстры, 2 — фоновые «вылеты», 5 — чекер, 6 — верхняя картинка */
     .layer-fx { z-index: 2; pointer-events: none; }
     .layer-monsters-shadow { z-index: 0; pointer-events: none; }
     .layer-monsters { z-index: 1; pointer-events: none; }
     .layer-checker { z-index: 5; }
     .layer-topimg { z-index: 6; }
 
-    /* ====== КОНТЕЙНЕР ЦЕНТРА ====== */
     .stack {
       position: relative;
       width: var(--page-w);
       margin: 20px auto 0 auto;
     }
 
-    /* ====== ВЕРХНЯЯ КАРТИНКА ====== */
-    .top-image {
-      position: relative;
-      width: var(--page-w);
-      margin: 0 auto 10px auto;
-    }
-    .top-image img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+    .top-image img { width: 100%; display: block; }
 
-    /* ====== ЧЕКЕР ====== */
     .checker {
-      position: relative;
       width: var(--page-w);
       margin: 0 auto 10px auto;
       display: flex;
@@ -56,7 +39,6 @@
       align-items: center;
       text-align: center;
     }
-
     .checker .row {
       width: 100%;
       display: flex;
@@ -64,7 +46,6 @@
       align-items: center;
       gap: 10px;
     }
-
     #walletInput {
       width: 300px;
       padding: 12px 15px;
@@ -73,182 +54,26 @@
       border: none;
       outline: none;
     }
-
-    #checkBtn {
-      background: none;
-      border: none;
-      cursor: pointer;
-      padding: 0;
-    }
-
-    .beret-btn {
-      width: 140px;
-      transition: transform 0.2s ease;
-      display: block;
-    }
-    .beret-btn:hover {
-      transform: scale(1.05) rotate(-2deg);
-    }
-
+    #checkBtn { background: none; border: none; cursor: pointer; padding: 0; }
+    .beret-btn { width: 140px; transition: transform 0.2s ease; }
+    .beret-btn:hover { transform: scale(1.05) rotate(-2deg); }
     #result {
       text-align: center;
       margin-top: 10px;
       font-size: 18px;
       font-weight: bold;
-      min-height: 22px; /* чтобы не прыгало */
-    }
-
-    /* ====== ВЕЧНЫЕ ВЫЛЕТЫ (БИЛЕТЫ, БЕРЕТЫ, ПУЗЫРИ) ====== */
-    .fx-field {
-      position: fixed;
-      left: 0;
-      bottom: -120px; /* старт ниже экрана */
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    /* Общая «частица» */
-    .fx-item {
-      position: absolute;
-      bottom: -120px;
-      left: 0;
-      transform: translateX(var(--x, 0)) translateY(0) rotate(0deg);
-      opacity: 0;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-      animation-fill-mode: forwards;
-      will-change: transform, opacity;
-      pointer-events: none;
-    }
-
-    /* БИЛЕТЫ */
-    .ticket-item img {
-      width: var(--size, 110px);
-      height: auto;
-      display: block;
-    }
-    .ticket-item {
-      animation-name: flyTicket;
-      animation-duration: var(--dur, 7s);
-      animation-delay: var(--delay, 0s);
-    }
-    @keyframes flyTicket {
-      0%   { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
-      5%   { opacity: 1; }
-      100% { transform: translateX(calc(var(--x, 0) + 120px)) translateY(-110vh) rotate(360deg); opacity: 0; }
-    }
-
-    /* БЕРЕТЫ */
-    .beret-item img {
-      width: var(--size, 95px);
-      height: auto;
-      display: block;
-    }
-    .beret-item {
-      animation-name: flyBeret;
-      animation-duration: var(--dur, 9s);
-      animation-delay: var(--delay, 0s);
-    }
-    @keyframes flyBeret {
-      0%   { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
-      10%  { opacity: 1; }
-      100% { transform: translateX(calc(var(--x, 0) - 160px)) translateY(-120vh) rotate(-720deg); opacity: 0; }
-    }
-
-    /* ПУЗЫРИ */
-    .bubble-item {
-      width: var(--size, 40px);
-      height: var(--size, 40px);
-      background: rgba(255,255,255,0.22);
-      border-radius: 50%;
-      animation-name: flyBubble;
-      animation-duration: var(--dur, 12s);
-      animation-delay: var(--delay, 0s);
-      box-shadow: inset -6px -10px 18px rgba(255,255,255,0.25), inset 6px 10px 18px rgba(0,0,0,0.08);
-      backdrop-filter: blur(2px);
-    }
-    @keyframes flyBubble {
-      0%   { transform: translateX(var(--x, 0)) translateY(0) scale(1); opacity: 0.4; }
-      50%  { opacity: 0.9; }
-      100% { transform: translateX(calc(var(--x, 0) + 40px)) translateY(-110vh) scale(1.6); opacity: 0; }
-    }
-
-    /* ====== МОНСТРЫ ====== */
-    .monsters-shadow,
-    .monsters {
-      position: fixed;
-      bottom: -15%;
-      left: 0;
-      width: 100%;
-      height: 60vh;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      pointer-events: none;
-    }
-
-    .monsters-shadow {
-      bottom: -12%;
-      height: 65vh;
-      opacity: 0.4;
-      filter: grayscale(1) brightness(0.3) blur(2px);
-    }
-    .monsters-shadow .shadow {
-      height: 100%;
-    }
-    .monsters-shadow img {
-      height: 100%;
-      opacity: 0.7;
-    }
-    .monsters-shadow .center img {
-      animation: shadowFloat 10s ease-in-out infinite;
-    }
-    @keyframes shadowFloat {
-      0%, 100% { transform: translateY(5%); }
-      50%      { transform: translateY(-5%); }
-    }
-
-    .monsters .monster {
-      position: relative;
-      height: 100%;
-    }
-    .monsters img {
-      height: 100%;
-      transform-origin: bottom center;
-      animation: monsterPeek 5s ease-in-out infinite;
-    }
-    .monsters .center {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      height: 100%;
-    }
-    .monsters .center img {
-      animation: monsterPeekCenter 5s ease-in-out infinite;
-    }
-    @keyframes monsterPeek {
-      0%, 100% { transform: translateY(15%) rotate(0deg); }
-      50%      { transform: translateY(0) rotate(3deg); }
-    }
-    @keyframes monsterPeekCenter {
-      0%, 100% { transform: translateY(20%) scale(1); }
-      50%      { transform: translateY(0) scale(1.05); }
+      min-height: 22px;
     }
   </style>
 </head>
 <body>
 
-  <!-- ВЕРХНЯЯ КАРТИНКА (над всем) -->
   <div class="stack layer-topimg">
     <div class="top-image">
-      <!-- замени на свой файл при необходимости -->
-   <img src="foto9.png" alt="Foto9" class="foto9">
-
+      <img src="foto9.png" alt="Foto9">
     </div>
   </div>
 
-  <!-- ЧЕКЕР (над монстрами, ниже верхней картинки) -->
   <div class="stack layer-checker">
     <div class="checker">
       <div class="row">
@@ -261,122 +86,73 @@
     </div>
   </div>
 
-  <!-- Бесконечные вылеты (фон), идут ЗА чекером -->
-  <div class="fx-field layer-fx" aria-hidden="true">
-    <!-- БИЛЕТЫ -->
-    <div class="fx-item ticket-item" style="--x:10vw;  --delay:0.5s; --dur:7.5s; --size:110px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:30vw;  --delay:2.2s; --dur:6.2s; --size:120px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:55vw;  --delay:1.4s; --dur:8.4s; --size:105px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:72vw;  --delay:3.1s; --dur:7.0s; --size:115px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:85vw;  --delay:4.0s; --dur:6.6s; --size:100px;"><img src="haha_20.png" alt=""></div>
+<script>
+  const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
+  let whitelist = [];
 
-    <!-- БЕРЕТЫ (красные) -->
-    <div class="fx-item beret-item"  style="--x:18vw;  --delay:1.0s; --dur:9.2s; --size:95px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item"  style="--x:42vw;  --delay:2.8s; --dur:7.8s; --size:100px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item"  style="--x:63vw;  --delay:0.7s; --dur:9.8s; --size:90px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item"  style="--x:77vw;  --delay:3.6s; --dur:8.6s; --size:92px;"><img src="bar_out_18.png" alt=""></div>
+  document.addEventListener("DOMContentLoaded", () => {
+    const checkBtn = document.getElementById("checkBtn");
+    if (checkBtn) checkBtn.disabled = true;
 
-    <!-- ПУЗЫРИ -->
-    <div class="fx-item bubble-item" style="--x:8vw;   --delay:0.4s; --dur:13s; --size:38px;"></div>
-    <div class="fx-item bubble-item" style="--x:25vw;  --delay:1.9s; --dur:15s; --size:44px;"></div>
-    <div class="fx-item bubble-item" style="--x:40vw;  --delay:3.0s; --dur:12s; --size:36px;"></div>
-    <div class="fx-item bubble-item" style="--x:58vw;  --delay:0.8s; --dur:16s; --size:50px;"></div>
-    <div class="fx-item bubble-item" style="--x:73vw;  --delay:2.5s; --dur:14s; --size:42px;"></div>
-    <div class="fx-item bubble-item" style="--x:90vw;  --delay:4.0s; --dur:18s; --size:46px;"></div>
-  </div>
-
-  <!-- ТЕНИ МОНСТРОВ -->
-  <div class="monsters-shadow layer-monsters-shadow">
-    <div class="shadow left"><img src="game7.png" alt="Shadow Left"></div>
-    <div class="shadow center"><img src="game6.png" alt="Shadow Center"></div>
-    <div class="shadow right"><img src="game8.png" alt="Shadow Right"></div>
-  </div>
-
-  <!-- МОНСТРЫ (выглядывают из экрана) -->
-  <div class="monsters layer-monsters">
-    <div class="monster left"><img src="game7.png" alt="Monster Left"></div>
-    <div class="monster center"><img src="game6.png" alt="Monster Center"></div>
-    <div class="monster right"><img src="game8.png" alt="Monster Right"></div>
-  </div>
-
-  <script>
-    // ---- Настройки источника белого списка ----
-    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
-    let whitelist = [];
-
-    // Обеспечим, что код запускается после загрузки DOM
-    document.addEventListener("DOMContentLoaded", () => {
-      // Кнопка может быть ещё не прогружена, подстрахуемся
-      const checkBtn = document.getElementById("checkBtn");
-      if (checkBtn) checkBtn.disabled = true;
-
-      loadWhitelist().then(() => {
-        if (checkBtn) checkBtn.disabled = false;
-      });
-
-      document.getElementById("walletInput").addEventListener("keypress", e => {
-        if (e.key === "Enter") checkWallet();
-      });
+    loadWhitelist().then(() => {
+      if (checkBtn) checkBtn.disabled = false;
     });
 
-    // Загружает CSV, всегда свежий (без кэша)
-    async function loadWhitelist() {
-      try {
-        const bust = "&t=" + Date.now(); // кэш-бастер, чтобы видеть новые адреса сразу
-        const url = "https://corsproxy.io/?" + encodeURIComponent(SHEET_URL + bust);
+    document.getElementById("walletInput").addEventListener("keypress", e => {
+      if (e.key === "Enter") checkWallet();
+    });
+  });
 
-        const res = await fetch(url, { cache: "no-store" });
-        if (!res.ok) throw new Error("HTTP " + res.status);
-
-        const csvText = await res.text();
-
-        // Разбор CSV: берём первый столбец, чистим кавычки/пробелы/регистры
-        whitelist = csvText
-          .split(/\r?\n/)
-          .map(line => line.split(",")[0])
-          .map(addr => (addr || "").trim().replace(/['"]/g, "").toLowerCase())
-          .filter(addr => addr.length > 0);
-
-        // Уберём дубликаты, если вдруг
-        whitelist = Array.from(new Set(whitelist));
-
-        console.log("Whitelist загружен:", whitelist.length, "адресов");
-      } catch (err) {
-        console.error("Whitelist load error:", err);
-        const resultEl = document.getElementById("result");
-        if (resultEl) {
-          resultEl.innerText = "Whitelist load error 😢";
-          resultEl.style.color = "#ffaaaa";
-        }
-      }
-    }
-
-    function checkWallet() {
-      const inputEl = document.getElementById("walletInput");
+  async function loadWhitelist() {
+    try {
+      const bust = "&t=" + Date.now();
+      const url = "https://corsproxy.io/?" + encodeURIComponent(SHEET_URL + bust);
+      const res = await fetch(url, { cache: "no-store" });
+      if (!res.ok) throw new Error("HTTP " + res.status);
+      const csvText = await res.text();
+      whitelist = csvText
+        .split(/\r?\n/)
+        .map(line => line.split(",")[0])
+        .map(addr => (addr || "").trim().replace(/['"]/g, "").toLowerCase())
+        .filter(addr => addr.length > 0);
+      whitelist = Array.from(new Set(whitelist));
+      console.log("Whitelist loaded:", whitelist.length);
+    } catch (err) {
+      console.error("Whitelist load error:", err);
       const resultEl = document.getElementById("result");
-      if (!inputEl || !resultEl) return;
-
-      const input = inputEl.value.trim().toLowerCase();
-
-      if (!input) {
-        resultEl.innerText = "Enter wallet address!";
+      if (resultEl) {
+        resultEl.innerText = "Whitelist load error 😢";
         resultEl.style.color = "#ffaaaa";
-        return;
-      }
-
-      if (whitelist.includes(input)) {
-        resultEl.innerText = "✅ Address is in whitelist!";
-        resultEl.style.color = "#00ff88";
-      } else {
-        resultEl.innerText = "❌ Address not found in whitelist.";
-        resultEl.style.color = "#ff6688";
-          inputEl.value = "";
       }
     }
-  </script>
+  }
+
+  function checkWallet() {
+    const inputEl = document.getElementById("walletInput");
+    const resultEl = document.getElementById("result");
+    if (!inputEl || !resultEl) return;
+
+    const input = inputEl.value.trim().toLowerCase();
+
+    if (!input) {
+      resultEl.innerText = "Enter wallet address!";
+      resultEl.style.color = "#ffaaaa";
+      return;
+    }
+
+    if (whitelist.includes(input)) {
+      resultEl.innerText = "✅ Address is in whitelist!";
+      resultEl.style.color = "#00ff88";
+    } else {
+      resultEl.innerText = "❌ Address not found in whitelist.";
+      resultEl.style.color = "#ff6688";
+    }
+
+    // Очищаем поле и ставим фокус
+    inputEl.value = "";
+    inputEl.focus();
+  }
+</script>
+
 </body>
 </html>
-
-
-
-
